project restructure